# Telebot

./: Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  fix_else.py  fix_lint.py  fix_try_else.py  pyproject.toml
app/: __init__.py  config.py  database.py  logging.py  models.py
app/bot/: __init__.py  main.py
app/bot/handlers/: __init__.py  commands.py  messages.py
app/services/: opencode_session.py  session_manager.py
tests/: test_basic.py
