[project]
name = "telebot"
version = "0.1.0"
description = "Telegram Remote Controller for OpenCode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "sqlmodel>=0.0.21",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "uvloop>=0.19; sys_platform != 'win32'",
    "psutil>=5.9",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-psutil>=7.2.2.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20", "ANN", "ARG", "PTH", "ERA", "PL", "TRY"]
ignore = ["S101", "ANN101", "ANN102", "ANN201", "ANN202", "ANN204", "ANN401", "TRY003", "PTH123", "ARG001", "ARG002"]
fixable = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20", "PL", "TRY"]
unfixable = ["S", "ANN", "ARG", "PTH", "ERA"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
